--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -30,7 +30,7 @@
     width: 100%;
     padding: 10px 0;
     justify-content: center;
-    background-color: #E6FCFF;
+    background-color: #FFE4D3;
   }
 
   .desctop {
