--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@ button {
   cursor: pointer;
 }
 
+img {
+  object-fit: cover;
+}
+
+h1, h2, h3 {
+  margin: 0;
+}
+
 .app {
   display: flex;
   flex-direction: column;
