--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -1,4 +1,4 @@
-.container {
+.main {
   padding: 80px 0;
   display: flex;
   align-items: center;
@@ -6,6 +6,7 @@
   gap: 95px;
 }
 
+/* Main Screen */
 .info {
   flex-basis: 50%;
   display: flex;
@@ -53,12 +54,38 @@
   grid-row: 1 / 3;
 }
 
+/* Novelties Screen */
+.novelties {
+  padding: 80px 0;
+}
+.h2 {
+  margin-bottom: 60px;
+  text-align: center;
+}
+
+.products {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 60px;
+  gap: 20px;
+}
+
+.link {
+  width: 100%;
+  display: block;
+  text-align: right;
+}
+
+
 @media (max-width: 1700px) {
   .images img:nth-child(3) {
     width: 360px;
   }
-}
 
+  .products a:nth-child(n+6) {
+    display: none;
+  }
+}
 
 @media (max-width: 1400px) {
   .header {
@@ -83,10 +110,14 @@
   .advantage {
     font-size: 14px;
   }
+
+  .products a:nth-child(n+5) {
+    display: none;
+  }
 }
 
 @media (max-width: 1200px) {
-  .container {
+  .main {
     padding: 60px 0;
     gap: 40px;
   }
@@ -111,10 +142,16 @@
     width: 300px;
     height: 440px;
   }
+  .novelties {
+    padding: 60px 0;
+  }
+  .link {
+    font-size: 14px;
+  }
 }
 
 @media (max-width: 900px) {
-  .container {
+  .main {
     gap: 24px;
   }
   .header {
@@ -130,16 +167,33 @@
   .advantage {
     gap: 12px;
   }
+  .products {
+    flex-wrap: wrap;
+    margin-bottom: 24px;
+  }
+  .products a:nth-child(n+5) {
+    display: flex;
+  }
+  .h2 {
+    font-size: 20px;
+    margin-bottom: 32px;
+  }
 }
 
 @media (max-width: 600px) {
-  .container {
+  .main {
     gap: 0;
   }
   .header {
     text-align: center;
   }
   .images img:nth-child(3) {
+    display: none;
+  }
+  .products {
+    gap: 10px;
+  }
+  .products a:nth-child(n+5) {
     display: none;
   }
 }
