--- a/src/components/ui/ui.module.css
+++ b/src/components/ui/ui.module.css
@@ -76,9 +76,92 @@
   }
 }
 
-@media (max-width: 1200px ) {
+/* Для инпутов */
+.label {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.label span {
+  margin-left: 16px;
+  margin-bottom: 16px;
+}
+
+.label input {
+  padding: 12px 16px;
+  min-width: 400px;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #E0E1E4;
+  border-radius: 16px;
+  font-size: 16px;
+  color: #000;
+  font-family: 'Inter', sans-serif;
+}
+
+.label input:focus {
+  outline: solid 2px #FD7621;
+}
+
+.label input::placeholder {
+  font-size: 16px;
+  color: #E0E1E4;
+  font-family: 'Inter', sans-serif;
+}
+
+.error {
+  margin: 0;
+  position: absolute;
+  bottom: -18px;
+  right: 16px;
+  font-size: 12px;
+  color: #FD2C21
+}
+
+.error+input {
+  outline: solid 2px #FD2C21;
+}
+
+@media (max-width: 1700px) {
+  .label input {
+    min-width: 298px;
+  }
+}
+
+@media (max-width: 1400px) {
+  .label input {
+    min-width: 268px;
+  }
+}
+
+@media (max-width: 1200px) {
   .button {
     padding: 12px 60px;
+    font-size: 14px;
+  }
+
+  .label span {
+    margin-bottom: 10px;
+  }
+
+  .label input {
+    font-size: 14px;
+    min-width: 320px;
+  }
+
+  .label input::placeholder {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 600px ) { 
+  .label input {
+    min-width: 100%;
+    padding: 10px 12px;
+  }
+
+  .label span {
     font-size: 14px;
   }
 }
