--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -98,8 +98,24 @@
   font-weight: 400;
 }
 
+/* Form */
+.form {
+  padding: 80px 0 160px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 24px;
+}
+
+.form h2 {
+  margin-bottom: 24px;
+}
 
 @media (max-width: 1700px) {
+  .header {
+    font-size: 36px;
+  }
+
   .images img:nth-child(3) {
     width: 360px;
   }
@@ -139,6 +155,11 @@
 
   .about {
     width: 100%;
+  }
+
+  .form {
+    align-items: flex-start;
+    gap: 100px;
   }
 }
 
@@ -232,6 +253,17 @@
     border-radius: 16px;
     padding: 40px 24px;
   }
+
+  .form {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+    padding: 40px 0;
+  }
+
+  .form h2 {
+    text-align: center;
+  }
 }
 
 @media (max-width: 600px) {
@@ -255,5 +287,15 @@
   }
   .text p {
     font-size: 12px;
+  }
+
+  .form h2 {
+    font-size: 18px;
+    margin-bottom: 24px;
+  }
+
+  .form p {
+    font-size: 14px;
+    text-align: center;
   }
 }
