feature add info pages

--- a/src/components/ui/ui.module.css
+++ b/src/components/ui/ui.module.css
@@ -133,6 +133,10 @@
   display: inline-block;
 }
 
+.sent {
+  text-align: center;
+}
+
 @media (max-width: 1700px) {
   .label input {
     min-width: 298px;
