--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,5 +1,5 @@
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -12,7 +12,7 @@
   background-color: #fff;
   border-radius: 32px;
   padding: 60px 80px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
