--- a/src/components/ui/ui.module.css
+++ b/src/components/ui/ui.module.css
@@ -32,7 +32,7 @@
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: #fff;
+  background: #FD7621;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds div:nth-child(1) {
