--- a/src/pages/info/info.module.css
+++ b/src/pages/info/info.module.css
@@ -6,6 +6,9 @@
 .container h2 {
   margin-bottom: 24px;
 }
+.container a {
+  color: #FD7621;
+}
 
 .block {
   margin-bottom: 32px;
@@ -20,9 +23,12 @@
 .block span {
   font-weight: bold;
 }
-.block a {
-  color: #FD7621;
+
+.lottie {
+  width: 40%;
+  margin-top: 32px;
 }
+
 
 @media (max-width: 900px) {
   .container {
@@ -30,5 +36,10 @@
   }
   .block {
     font-size: 14px;
+  }
+  .lottie {
+    width: 80%;
+    margin: auto;
+    margin-top: 24px;
   }
 }
