--- a/src/pages/product/product.module.css
+++ b/src/pages/product/product.module.css
@@ -1,7 +1,7 @@
 .container {
   padding: 80px 0;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 80px;
   flex-basis: 100%;
@@ -22,7 +22,7 @@
   display: flex;
   gap: 80px;
   width: 100%;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .description {
