--- a/src/pages/catalog/catalog.module.css
+++ b/src/pages/catalog/catalog.module.css
@@ -15,6 +15,19 @@
   overflow: hidden;
 }
 
+.mobileNav {
+  background-color: #fff;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 8px;
+}
+
+.mobile {
+  display: none;
+}
+
 .category {
   padding: 10px 20px;
   cursor: pointer;
@@ -63,18 +76,28 @@
     align-items: center;
     gap: 24px;
     padding: 40px 0;
+    position: relative;
+  }
+  .desctop {
+    display: none;
+  }
+  .mobile {
+    display: block;
   }
   .navigation {
-    flex-direction: row;
-    max-width: 90vw;
-    overflow-x: scroll;
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border: 1px solid #E0E1E4
   }
-  .navigation span {
+  .category {
     font-size: 12px;
     flex-shrink: 0;
   }
   .products {
     justify-content: center;
     gap: 20px;
+    width: 100%;
   }  
 }
