--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -14,6 +14,10 @@
   gap: 100px;
 }
 
+.navigation a {
+  font-size: 18px;
+}
+
 .active {
   color: #FD7621;
   cursor: default;
@@ -43,6 +47,9 @@
 @media (max-width: 1200px ) {
   .navigation {
     gap: 50px;
+  }
+  .navigation a {
+    font-size: 16px;
   }
 }
 
