--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,6 +1,5 @@
 .header {
   background-color: #fff;
-  padding: 20px 0;
 }
 
 .container {
@@ -11,16 +10,20 @@
 
 .navigation {
   display: flex;
-  gap: 100px;
+  gap: 20px;
 }
 
 .navigation a {
   font-size: 18px;
+  padding: 20px 40px;
+}
+
+.navigation a:hover {
+  background-color: #FFE4D3;
 }
 
 .active {
   color: #FD7621;
-  cursor: default;
 }
 
 .mobile {
@@ -45,17 +48,15 @@
 }
 
 @media (max-width: 1200px ) {
-  .navigation {
-    gap: 50px;
-  }
   .navigation a {
     font-size: 16px;
+    padding: 20px 10px;
   }
 }
 
 @media (max-width: 900px ) {
   .header {
-    padding-bottom: 0;
+    padding: 20px 0 0 0;
   }
 
   .mobile {
@@ -67,7 +68,11 @@
     margin-top: 20px;
   }
 
-  .desctop {
+  .navigation a {
+    padding: 0;
+  }
+
+  .desktop {
     display: none;
   }
 }
